<resources>
    <string name="app_name">PL02App</string>
    <string name="title_activity_login_register">LoginRegisterActivity</string>
    <string name="login_tab_text">Log In</string>
    <string name="register_tab_text">Register</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">PL02</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_all_recipes">All recipes</string>
    <string name="menu_upload_recipe">Upload recipes</string>
    <string name="menu_other">Other</string>

    <string name="menu_account">Account</string>
    <string name="menu_logout">Log out</string>

    <string name="api_url">http://pl02api.sempiedram.com:35000</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">User info here!</string>

    <string name="password_text">password</string>
    <string name="login_username">username</string>
    <string name="register_username">username</string>
    <string name="register_email">email</string>
    <string name="register_name">name</string>
    <string name="register_password">password</string>
    <string name="register_confirm_password">confirm password</string>
    <string name="register_button">register</string>
    <string name="recipe_remove_ingredient">remove ingredient</string>
    <string name="recipe_add_ingredient">add ingredient</string>
    <string name="recipe_ingredient">ingredient</string>
    <string name="recipe_step">step</string>
    <string name="recipe_remove_photo">remove photo</string>
    <string name="recipe_add_photo">add photo</string>
    <string name="recipe_id">recipe id</string>
    <string name="recipe_add_step">add step</string>
    <string name="recipe_remove_step">remove step</string>
    <string name="upload_recipe">upload</string>
    <string name="recipe_type">recipe type</string>
    <string name="empty_item"><![CDATA[<empty>]]></string>
    <string name="photo_item">photo item</string>
    <string name="error_reason">Reason:</string>
    <string name="nav_header_subtitle">Recipes Manager</string>
    <string name="steps">steps</string>
    <string name="ingredients">ingredients</string>
</resources>
