<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_all_recipes"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_all_recipes" />
        <item
            android:id="@+id/menu_upload_recipe"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_upload_recipe" />
        <item
            android:id="@+id/menu_other"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_other" />
    </group>

    <item android:title="@string/menu_account">
        <menu>
            <item
                android:id="@+id/menu_account"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_account" />
            <item
                android:id="@+id/menu_log_out"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
